[project]
name = "client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "cryptography>=46.0.4",
    "httpx>=0.28.1",
    "keyring>=25.7.0",
    "jinja2>=3.1.6",
    "paramiko>=4.0.0",
    "pulumi>=3.219.0",
    "pulumi-aws>=7.19.0",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "sqlalchemy>=2.0.0",
    "typer>=0.21.1",
]
